# PipelineDemo

./: PROJECT_BLUEPRINT.md  TECHNICAL_SPEC.md  requirements.md
motion_qc_v0.1.0/: .gitignore  README.md  pyproject.toml  requirements.txt
motion_qc_v0.1.0/scripts/: check_single_video.py
motion_qc_v0.1.0/src/motion_qc/: __init__.py  types.py
motion_qc_v0.1.0/src/motion_qc/media/: executor.py  thumb.py
motion_qc_v0.1.0/src/motion_qc/vlm/: chatbot.py  config.py  prompt.py
pipeline/: run_pipeline.py
pipeline/output/: pipeline_report.json
pipeline/worker/: clip_filter.py  metadata_filter.py  prescreen.py  qc_runner.py  scan_and_segment.py  segmenter.py
需求文档/: 合同修改意见.md  数据需求0303（4000）.xlsx  视频采集服务协议.docx
